--- a/我的书架-纯净版/app.json
+++ b/我的书架-纯净版/app.json
@@ -3,6 +3,6 @@
     "pages/index/index"
   ],
   "window": {
-    "navigationBarTitleText": "我的书架-纯净版"
+    "navigationBarTitleText": "我的书架"
   }
 }
